--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
 
 header nav {
   display: flex;
-  width: 122rem;
+  width: 95%;
   height: 5.4rem;
   padding: 0 10px;
   margin: 0 auto; 
@@ -102,16 +102,15 @@ nav i.fa-bars {
 
 .main-menu { 
   display: flex;
-  width: 122rem;
+  width: 95%;
   height: 100%;
   padding: 0 10px;
   margin: 0 auto;
-  border: 1px solid black;
 }
 
 .menu-item {
   border: 1px solid transparent;
-  border-radius: 16px;
+  border-radius: 30px;
   margin: 5px 10px;
   padding: 7px 10px;
   font-size: 12px;
@@ -121,6 +120,10 @@ nav i.fa-bars {
 }
 .menu-item:hover {
   border: 1px solid white;
+}
+
+.menu-item>a {
+  color: white;
 }
 
 .menu-item-products {
@@ -142,10 +145,9 @@ nav i.fa-bars {
 
 .main-menu-body {
   display: flex;
-  width: 122rem;
+  width: 95%;
 /*   height: 100%; */
   background-color: white;
-  border: 1px solid;
   margin: 0 auto;
   position: relative;
 }
@@ -154,6 +156,8 @@ nav i.fa-bars {
   /* border: 1px solid blue; */
   width: 240px;
   height: 100%;
+  min-height: 500px;
+  box-shadow: 0 2px 10px -2px rgb(0 0 0 / 15%);
   list-style: none;
   z-index: 2;
 }
@@ -169,6 +173,7 @@ nav i.fa-bars {
   color: darkblue;
   border-top-color: #eee;
   border-bottom-color: #eee;
+  background-color: white;
 }
 
 .left-menu-sidebar > li .mega-menu-item {
@@ -176,14 +181,16 @@ nav i.fa-bars {
   opacity: 0;
   /* transform: translateX(-30px); */
   position: absolute;
-  height: 400px;
+/*   height: 400px; */
   width: 720px;
+  min-height: 100%;
   left: 240px;
   top: 0;
-  transition: all .2s;
+  box-shadow: 0 2px 10px -2px rgb(0 0 0 / 15%);
   background: white;
+  z-index: -1;
+  transition: all .2s ease;
 }
-
 .left-menu-sidebar > li:hover .mega-menu-item {
   visibility: visible;
   opacity: 1;
@@ -351,12 +358,13 @@ main {
 
 .toys-section {
   height: 500px;
+  margin: 25px 0;
   background-color: #702bdf;
 }
 
 .toys-inner-container {
-  width: 122rem;
-  border: 1px solid red;
+  width: 95%;
+  padding: 20px 0;
   margin: auto;  
 }
 
@@ -415,7 +423,7 @@ main {
 
 
 .products-section {
-  width: 122rem;
+  width: 95%;
   padding: 0 10px;
   min-height: 20rem;
   margin: 0 auto;
@@ -634,7 +642,7 @@ main {
 
 
 .newsletter-sec{
-  width: 122rem;
+  width: 95%;
   padding: 10px;
   margin: 0 auto;
 }
@@ -700,7 +708,7 @@ main {
 
 
 .marketplace {
-  width: 122rem;
+  width: 95%;
   padding: 20px 10px;
   margin: 0 auto;
 }
@@ -767,7 +775,7 @@ footer .app-emag>div, footer .copyright>div {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 122rem;
+  width: 95%;
   padding: 0 10px;
   margin: 0 auto;
 }
@@ -841,7 +849,7 @@ footer .lists>div {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  width: 122rem;
+  width: 95%;
   padding: 0 10px;
   margin: 0 auto;
 }
