--- a/style.css
+++ b/style.css
@@ -118,9 +118,13 @@ nav i.fa-bars {
   color: white;
   transition: border-color 0.3s;
 }
+.menu-item:not(.menu-item-products) {
+  align-self: center;
+}
 .menu-item:hover {
   border: 1px solid white;
 }
+
 
 .menu-item>a {
   color: white;
@@ -146,18 +150,18 @@ nav i.fa-bars {
 .main-menu-body {
   display: flex;
   width: 95%;
-/*   height: 100%; */
-  background-color: white;
+  padding: 0 10px;
   margin: 0 auto;
   position: relative;
+/*   background-color: white; */
 }
 
 .left-menu-sidebar {
-  /* border: 1px solid blue; */
   width: 240px;
   height: 100%;
   min-height: 500px;
   box-shadow: 0 2px 10px -2px rgb(0 0 0 / 15%);
+  background-color: white;
   list-style: none;
   z-index: 2;
 }
@@ -181,11 +185,11 @@ nav i.fa-bars {
   opacity: 0;
   /* transform: translateX(-30px); */
   position: absolute;
-/*   height: 400px; */
-  width: 720px;
-  min-height: 100%;
-  left: 240px;
+  left: 250px;
   top: 0;
+/*   height: 400px; */
+  width: 75%;
+  min-height: 100%;
   box-shadow: 0 2px 10px -2px rgb(0 0 0 / 15%);
   background: white;
   z-index: -1;
@@ -246,21 +250,22 @@ nav i.fa-bars {
   flex-shrink: 0;
   width: 100%;
   height: 100%;
-}
-
-.slider-images > div:first-child {
-  background-image: url(image/promo1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
+.slider-images > div:first-child {
+  background-image: url(image/promo1.jpg);
+  
+}
+
 .slider-images > div:nth-child(2) {
-  background-color: #E9EBEE;
+  background-image: url(https://s13emagst.akamaized.net/layout/ro/images/db//91/136690.jpg);
 }
 
 .slider-images > div:nth-child(3) {
-  background-color: #E9EBEE;
+  background-image: url(https://s13emagst.akamaized.net/layout/ro/images/db//91/136200.jpg);
 }
 
 
